/*
 *  UCF COP3330 Summer 2021 Assignment 5 Solution
 *  Copyright 2021 Ryan Doherty
 */
package ucf.assignments;

public class Item {
    String name;
    String serial;
    double value;

    public Item(String name, String serial, double value) {
        this.name = name;
        this.serial = serial;
        this.value = value;
    }
}
