/*
 *  UCF COP3330 Summer 2021 Assignment 5 Solution
 *  Copyright 2021 Ryan Doherty
 */
package ucf.assignments;

import java.util.ArrayList;

public class ItemList {
    ArrayList<Item> items;

    public ItemList(ArrayList<Item> items) {
        this.items = items;
    }
}
