@startuml

class InventoryApp {
    main(String[] args)
    start(Stage stage)
}

class ItemList {
    ArrayList<Item> items
}

class InventoryModel {
    ArrayList<Item> items
    getInstance()
    getItems()
    readDataFromFile(String path)
    writeDataToFile(String path)
}

class Item {
    String name
    String serial
    double value
}

class DataFormatter {
    toHtml(ArrayList<Item> items)
    toJson(ArrayList<Item> items)
    toTsv(ArrayList<Item> items)
    fromHtml(String data)
    fromJson(String data)
    fromTsv(String data)
}

class MainController {
    initialize()
    saveOnClick()
    openOnClick()
    searchOnClick()
    sortOnClick()
    newItemOnClick()
    sortOnChoice()
}

class ItemDataDialog {
    display()
    checkValidSerial(String serial)
    closeOnClick()
    submitOnClick()
}

class ItemListCell {
    updateItem(ListItem item, boolean empty)
}

InventoryModel <-- ItemList
ItemList <-- Item
DataFormatter - InventoryModel

InventoryApp -- ItemDataDialog
InventoryApp -- ItemListCell
InventoryApp -- MainController
@enduml